fix title font size on small devices

--- a/src/components/productsList/productslist.css
+++ b/src/components/productsList/productslist.css
@@ -33,7 +33,7 @@
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   }
   .products-title {
-    font-size: 25px;
+    font-size: 45px;
   }
 }
 @media screen and (max-width: 375px) {
